@@ -4,6 +4,8 @@
 - Python callbacks can now be used with class member functions.
 - Memory tracking is no longer compiled in the client library.
 - Add --help option to mosquitto to display usage.
+- Add --id-prefix option to clients to allow easier use with brokers that are
+  using the clientid_prefix option.
 
 0.11.3 - 20110707
 =================
